fixed text appearing below search bar and text aligned to the left

--- a/app/assets/stylesheets/pages/_match.scss
+++ b/app/assets/stylesheets/pages/_match.scss
@@ -36,8 +36,8 @@
 }
 
 .match-info {
-  text-align: end;
-  margin-right: 10px;
+  text-align: left;
+  margin-left: 10px;
 }
 
 .match-name-card {
